0.12cvs
  Add "shell" command
  Doc fixes, add more GNU Emacs debugger commands

0.11
2006-01-29

* Add regression tests! As a result more of the debugger has been
  tested and a number of bugs in pdb.py have been found and fixed.

* Add line tracing. Allow a delay in linetracing:
   "set linetrace delay *float*" (delay is useful in front-end GUIs)

* Add debugger command options:
    --batch        - don't run interactive commands on shell stops
    --trace (-x)   - non-interactive line tracing a la POSIX shells
    --output (-o)  - redirect stdout to a file 
    --error        - redirect stderr to a file
    --command      - run a debugger command script

* New debugger commands:
   disassemble          - disassemble python instructions
   source               - run a debugger script
   set basename         - show long/short filenames
   set linetrace        - line tracing
   set linetrace delay  - see above
   set cmdtrace         - show debugger script commands before running

* step/next can now take a count. E.g. step 2 or next 3.

* Show more accurate and useful location when we are stopped on an exec.

* Stack trace now reports exec positions a little bit better - 
  it doesn't call it a file.

* Emacs interface (pydb.el) updated for expanded commands

* set prompt allows embedded blanks and punctiation. Still have problems
  with trailing blanks.

* show with no parameters is like gdb: shows all subcommands.

* Class name back to Pdb to make interaction with other programs like 
  ipython more transparent. The *module* name is Pydb, so one must either
  "import pydb" or import "pdb" (stock debugger).

* Error message output made more uniform

* output routines can be subclassed

* __file__ is set before debugging script. (Bug in 2.4.2 pdb.py)

0.10
2006-01-12

First release of extended python debugger.

* Add gdb frame command

* Add gdb run (restart) command

* Add some "set"/"show" commands:
    args, listsize, version (no set here), dialect
