@@ -1,4 +1,4 @@
-% $Id: libpydb.tex,v 1.12 2006/02/17 04:27:36 rockyb Exp $
+% $Id: libpydb.tex,v 1.13 2006/02/19 10:51:24 rockyb Exp $
 
 % A note on labels. First, labels get used has HTML names if they don't
 % have colons in them. Second, the last label inside a (sub)section will
@@ -375,11 +375,18 @@ Show the global variables. See \ref{command:info-globals}.
 
 \item[info line]
 
-Show the current line number in source file
+Show the current line number in source file. If a function name is
+given the starting line of the function is reported.
 
 \item[info locals]
 
 Show the local variables. See \ref{command:info-locals}. 
+
+\item[info program]
+
+Show the execution status of the program. The possible status is that
+the program is not running (e.g. in post-mortem dump), or the program is
+``stoppped'' and if stopped at a breakpoint that is shown as well.
 
 \item[info source]
 
@@ -478,7 +485,7 @@ condition is removed; i.e., the breakpoint is made unconditional.
 \end{description}
 
 \subsection{Resuming Execution ({\tt step}, {\tt next}, {\tt
-    finish}, {\tt continue}, {\tt jump})\label{subsubsection-resume}}
+    finish}, {\tt return} {\tt continue}, {\tt jump})\label{subsubsection-resume}}
 
 ``Continuing'' means resuming program execution until the program
 completes normally.  In contrast, ``stepping'' means executing just
@@ -505,7 +512,18 @@ stopping only at the next line in the current function.
 
 Continue execution until the current function returns.
 that point the \samp{retval} command can be used to show the
-return value. See also \ref{command:retval}.
+return value. The short command name is rv.
+
+See also \ref{command:retval} and \ref{command:return}.
+
+\item[return]\label{command:return}
+
+Make selected stack frame return to its caller. Control remains in the
+debugger, but when you continue execution will resume at the return
+statement found inside the subroutine or method.  At present we are
+only able to perform this if we are in a subroutine that has a
+\code{return} statement in it.  See also \ref{command:retval} and
+\ref{command:finish}
 
 \item[c(ont(inue))]
 
@@ -598,7 +616,12 @@ An example of a backtrace is given at the beginning of this section.
 
 Show the value that will be returned by the current function. This
 command is meaningful only just before a return (such as you'd get
-using the \samp{finish} command) or stepping after a return statement.
+using the \code{finish} or \code{return} commands) or stepping after a
+return statement.
+
+To change the value, make an assignment to the variable
+\code{__return__}.
+
 See also \ref{command:finish}.
 
 \item[d(own) \optional{\var{count}}]
